--- a/themes/8secondsCustom/Development/sass/partials/_main-split.scss
+++ b/themes/8secondsCustom/Development/sass/partials/_main-split.scss
@@ -49,6 +49,10 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  @media all and (max-width: 991px) {
+    position: relative;
+  }
+
 }
 
 .icon-mini {
